# ygz_TX2

./: CMakeLists.txt  README.md  build_ros.sh
ROS/ygz_stereo_inertial/: CMakeLists.txt  EurocStereo.yaml  StereoROS  StereoVioROS  manifest.xml  optorROS.yaml
ROS/ygz_stereo_inertial/src/: StereoROS.cpp  StereoVioROS.cpp
examples/: EurocStereo.yaml  EurocStereoVIO.yaml
